--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,11 +10,11 @@
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
 <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
 <link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
-{% if page.slug == "default" %}
 <!-- Documentation extras - not for production -->
 <link href="{{ site.baseurl }}/assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/src/docs.min.css" rel="stylesheet">
-{% elsif page.slug == "examples" %}
+<!-- //Documentation extras - not for production -->
+{% if page.slug == "examples" %}
 <link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/dist/css/multiple-select.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/dist/css/datatables.min.css" rel="stylesheet">
@@ -27,11 +27,11 @@
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
 <link rel="icon" href="../../images/favicons/favicon_fa.ico">
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
-{% if page.slug == "default" %}
 <!-- Documentation extras - not for production -->
 <link href="../../assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="../../assets/css/src/docs.css" rel="stylesheet">
-{% elsif page.slug == "examples" %}
+<!-- //Documentation extras - not for production -->
+{% if page.slug == "examples" %}
 <link href="../../dist/css/ku-gridboxes.css" rel="stylesheet">
 <link href="../../assets/css/multiple-select/multiple-select.css" rel="stylesheet">
 <link href="../../assets/css/datatables/datatables.css" rel="stylesheet">
