--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -11,8 +11,7 @@
 <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
 <link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Documentation extras - not for production -->
-<link href="{{ site.baseurl }}/assets/css/src/pygments-manni.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/src/docs.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/assets/css/docs.min.css" rel="stylesheet">
 <!-- //Documentation extras - not for production -->
 {% if page.slug == "examples" %}
 <link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet">
@@ -28,8 +27,7 @@
 <link rel="icon" href="../../images/favicons/favicon_fa.ico">
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
 <!-- Documentation extras - not for production -->
-<link href="../../assets/css/src/pygments-manni.css" rel="stylesheet">
-<link href="../../assets/css/src/docs.css" rel="stylesheet">
+<link href="../../assets/css/docs.min.css" rel="stylesheet">
 <!-- //Documentation extras - not for production -->
 {% if page.slug == "examples" %}
 <link href="../../dist/css/ku-gridboxes.css" rel="stylesheet">
@@ -38,7 +36,7 @@
 {% endif %}
 {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
-  <link href="../../assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
+<link href="../../assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
 {% endif %}
 {% endif %}
 
