--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -99,7 +99,14 @@
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="input-group">
-          <input class="form-control" id="searchinput" placeholder="Søg..." aria-label="Inputfelt til søgeord">
+          <input class="form-control" type="text" id="global_search_query" placeholder="Søg..." aria-label="Inputfelt til søgeord">
+          <input id="localdomain" name="localdomain" type="hidden" value="www.ku.dk">
+          <script type="text/javascript">
+              <!--
+              el = document.getElementById("localdomain");
+              el.value = window.location.hostname;
+            //-->
+          </script>
           <div class="input-group-btn btn-global-search">
             <button type="button" id="search" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="caret"></span> <span class="sr-only">Vis søgemuligheder</span> </button>
             <ul class="dropdown-menu dropdown-menu-right">
@@ -109,7 +116,7 @@
               <li role="separator" class="divider"></li>
               <li><a href="#">Efteruddannelse</a></li>
             </ul>
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            <button class="btn btn-default" name="sa" id="submit-button" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
         </div>
       </form>
