--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -98,8 +98,10 @@
     </div>
   </div>
 </footer>
+<script src="http://cms.ku.dk/system/valid_search_engines.js?lang=da"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
+<script src="{{ site.baseurl }}/dist/js//search.min.js"></script>
 <!-- Documentation extra - not for production -->
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
 <!-- //Documentation extra - not for production -->
@@ -115,6 +117,7 @@
 {% endif %}
 {% else %}
 <script src="../../dist/js/bootstrap.js"></script>
+<script src="../../assets/js/ku-global-search/search.js"></script>
 <script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="../../custom/ku-mobile-menu.js"></script>
 <script src="../../assets/js/docs.min.js"></script>
