--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -98,15 +98,16 @@
     </div>
   </div>
 </footer>
-<script src="http://cms.ku.dk/system/valid_search_engines.js?lang=da"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <script src="{{ site.baseurl }}/dist/js//search.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
+{% if page.slug != "examples" %}
 <!-- Documentation extra - not for production -->
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
 <!-- //Documentation extra - not for production -->
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
+{% endif %}
 {% if page.slug == "examples" %}
 <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
@@ -117,10 +118,13 @@
 {% endif %}
 {% else %}
 <script src="../../dist/js/bootstrap.js"></script>
+<script src="http://cms.ku.dk/system/valid_search_engines.js?lang=da"></script>
 <script src="../../assets/js/ku-global-search/search.js"></script>
 <script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="../../custom/ku-mobile-menu.js"></script>
+{% if page.slug != "examples" %}
 <script src="../../assets/js/docs.min.js"></script>
+{% endif %}
 {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
 <script src="../../assets/js/kurser.ku.dk/kurser.js"></script>
