--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -22,7 +22,7 @@
 {% endif %}
 {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
-<link href="{{ site.baseurl }}/assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
+<link href="http://cms.ku.dk/bootstrap-styling/css/kurser.ku.dk/kurser.css" rel="stylesheet">
 {% endif %}
 {% else %}
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
