--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -33,6 +33,7 @@
   }
   .ku-branding-line {
     border-bottom: 1px solid @ku-red;
+    margin-top: 3px;
     .theme-samf & {
       border-bottom: 1px solid @samf;
     }
