--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -49,6 +49,9 @@
 <script>
   window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')
 </script>
+<!--[if lt IE 9]>
+<script src="{{ site.baseurl }}/assets/js/ie8-responsive-file-warning.js"></script>
+<![endif]-->
 {% if page.slug == "examples"%}
 <!-- Bootstrap add-ons -->
 <script src="{{ site.baseurl }}/dist/js/bootstrap-datetimepicker.min.js"></script>
@@ -56,6 +59,9 @@
 <script src="{{ site.baseurl }}/dist/js/datatables.min.js"></script>
 {% endif %}
 {% else %}
+<!--[if lt IE 9]>
+<script src="../assets/js/ie8-responsive-file-warning.js"></script>
+<![endif]-->
 {% if page.slug == "examples"%}
 <!-- Bootstrap add-ons -->
 <script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
@@ -63,7 +69,7 @@
 <script src="../../assets/js/datatables/datatables.js"></script>
 {% endif %}
 {% endif %}
-<!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
