--- a/less/navbar.less
+++ b/less/navbar.less
@@ -59,8 +59,10 @@
               content: '\e114';
             }
 
-            ul li a:hover {
-              background-color: #f2f2f2;
+            ul li {
+              a:hover {
+                background-color: #f2f2f2;
+              }
             }
 
             > a {
@@ -94,6 +96,16 @@
       > a {
         &:hover {
           text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .dropdown-menu {
+    li {
+      &.selected {
+        > a {
+          background-color: #efefef;
         }
       }
     }
@@ -173,8 +185,8 @@
 
 .container,
 .container-fluid {
-   > .navbar-collapse,
-  > .navbar-header {
+   > .navbar-header,
+  > .navbar-collapse {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -305,8 +317,8 @@
       border: 0;
       box-shadow: none;
 
-      .dropdown-header,
-      > li > a {
+       > li > a,
+      .dropdown-header {
         padding: 5px 15px 5px 25px;
       }
 
@@ -657,7 +669,6 @@
 
     .icon-bar {
       background-color: @navbar-inverse-toggle-icon-bar-bg;
-
     }
   }
 
