--- a/docs/_includes/local-footer.html
+++ b/docs/_includes/local-footer.html
@@ -5,7 +5,6 @@
     <div class="col-xs-12 col-sm-6 footer-address">
       <address>
         {% if page.category == "kurser" %}
-          Support: <abbr title="Tlf.">tlf:</abbr> 353 22700 / <a href="mailto:it-service@adm.ku.dk">it-service@adm.ku.dk</a><br>
           Hvis du har spørgsmål til kurset, skal du skrive til studieadministrationen.
         {% else %}
           <a href="http://www.kommunikation.ku.dk">Kommunikation</a><br>
@@ -16,7 +15,11 @@
     </div>
     <div class="col-xs-12 col-sm-6 footer-data">
       <address>
-        {% if page.category != "kurser" %}
+        {% if page.category == "kurser" %}
+        Kurser.ku.dk<br>
+        <a href="mailto:it-service@adm.ku.dk">it-service@adm.ku.dk</a><br>
+        Support: <abbr title="Tlf.">tlf:</abbr> 353 22700
+        {% else %}
         Kommunikation<br>
         <a href="mailto:kommunikation@adm.ku.dk">kommunikation@adm.ku.dk</a><br>
         <abbr title="Tlf.">Tlf:</abbr>+45 35 32 42 61
