--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -1,5 +1,6 @@
 <!-- Left Navigation on SMALL screens (mmenu) -->
-<nav id="mobileleftmenu">{% include ku-mobilemenu-dummy.html %}</nav>
+<nav id="mobileleftmenu"></nav>
+<!-- include ku-mobilemenu-dummy.html -->
 <!-- Footer -->
 <footer id="footer">
   <div class="container-fluid globalfooter">
@@ -106,6 +107,7 @@
 <!-- Documentation extra - not for production -->
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
 <!-- //Documentation extra - not for production -->
+<script src="../../assets/js/ku-mobile-menu.js"></script>
 {% endif %}
 {% if page.slug == "examples" %}
 <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
